# Testing

./: Author and title.txt  README.md  Song.txt
03-04/: readme.md
09/: main.py  (+1 more)
10/: Browser.py  CoinMarketCapPage.py  CurrencyPage.py  TestCoinMarketCap.py  pyproject.toml
Framework/: pyproject.toml
Framework/driver/: DriverSingletone.py  __init__.py
Framework/model/: Coin.py  Potrfolio.py
Framework/page/: CoinMarketCapPage.py  ConvertorPage.py  CurrencyPage.py  PortfolioTrackerPage.py  __init__.py
Framework/profile/: DevToolsActivePort  Local State  first_party_sets.db
Framework/profile/Default/: Cookies  DIPS  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Visited Links  Web Data
Framework/profile/Default/DawnCache/: data_1  index
Framework/profile/Default/Extension Rules/: LOG
Framework/profile/Default/Extension Scripts/: LOG
Framework/profile/Default/Extension State/: LOG  LOG.old
Framework/profile/GrShaderCache/: data_0  data_1  data_2  index
Framework/profile/GraphiteDawnCache/: data_1  index
Framework/profile/ShaderCache/: data_1  index
Framework/profile/component_crx_cache/: hfnkpimlhhgieaddgfemjhofmfblmnib_1.700186aca99fa48a9e764078d8cfdab8f7981f11b119dafd6a0fc55b3dc6299e
Framework/profile/segmentation_platform/: ukm_db  ukm_db-journal
Framework/resources/: convertor.json  portfolio.json  search_dev.json  search_qa.json  transaction.json
Framework/test/: test_CMCPage.py  test_ConvertorPage.py  test_CurrencyPage.py  test_PortfolioTrackerPage.py
(+6348 files in other folders)
