[tool.poetry]
name = "09"
version = "0.1.0"
description = ""
authors = ["Chamster <nikkovkel258@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
