[tool.poetry]
name = "framework"
version = "0.1.0"
description = ""
authors = ["Chamster <nikkovkel258@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
webdriver-manager = "^4.0.1"
selenium = "^4.15.2"
pytest = "^7.4.3"
dotenv = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
